CF - nav fix - less right padding on mobile view

--- a/assets/scss/layout/_navigation.scss
+++ b/assets/scss/layout/_navigation.scss
@@ -40,4 +40,13 @@ nav {
   nav {
     text-align: center;
   }
+
+  [role=navigation] {
+    ul {
+      li {
+        padding-right: 0.25rem;
+      }
+
+    }
+  }
 }
