--- a/public/css/eth-angels.css
+++ b/public/css/eth-angels.css
@@ -248,7 +248,9 @@ nav {
 
 @media screen and (max-width: 570px) {
   nav {
-    text-align: center; } }
+    text-align: center; }
+  [role=navigation] ul li {
+    padding-right: 0.25rem; } }
 
 .page {
   color: red;
